--- a/angular2/src/app/card/card.component.html
+++ b/angular2/src/app/card/card.component.html
@@ -10,7 +10,7 @@
 				</div>
 				<div class="import-cover-deck">
 					<div class="change-cover">
-						<input type="text" formControlName="front" id="front-card-value" placeholder="Front">
+						<input type="text" formControlName="front" id="front-card-value" class="form-control" placeholder="Front">
 						<!-- <%= f.text_field :front, class: "form-control", id: "front-card-value", placeholder: "Front" %> -->
 					</div>
 				</div>
@@ -20,8 +20,7 @@
 			<div class="f-deck">
 				<div class="import-cover-deck">
 					<div class="change-cover">
-						<input type="text" formControlName="back" id="back-card-value" placeholder="Back">
-						<!-- <%= f.text_field :back, class: "form-control", id: "back-card-value", placeholder: "Back" %> -->
+						<input type="text" formControlName="back" id="back-card-value" class="form-control" placeholder="Back">
 					</div>
 				</div>
 			</div>
