--- a/angular2/src/app/user/login.component.html
+++ b/angular2/src/app/user/login.component.html
@@ -15,17 +15,17 @@
       <div class="devide-text">or</div>
     </div>
 
-    <form action="">
+    <form name="form" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
       <div class="form-group">
         <label for="">Email address</label>
         <input type="text" autofocus="true" class="form-control"
-        placeholder="Enter email">
+        placeholder="Enter email" name="email" [(ngModel)]="model.email" #email="ngModel" required >
       </div>
 
       <div class="form-group">
         <label for="">Password</label>
         <input type="password" autocomplete="off" class="form-control"
-        placeholder="Password">
+        placeholder="Password" name="password" [(ngModel)]="model.password" #password="ngModel" required>
       </div>
 
       <button type="submit" class="btn btn-block btn-custome">LOG IN</button>
@@ -34,3 +34,5 @@
   </div>
 </div>
 </div>
+
+
