--- a/angular2/src/app/user/signup.component.html
+++ b/angular2/src/app/user/signup.component.html
@@ -9,29 +9,29 @@
         <a href="login" class="link-custome">Login</a>
       </div>
 
-      <form action="" method="post">
+      <form name="form" (ngSubmit)="f.form.valid && register()" #f="ngForm" novalidate>
         <div class="form-group">
-          <label for="">Email address</label>
-          <input type="text" autofocus="true" class="form-control"
-          placeholder="Enter email">
+          <label for="email">Email address</label>
+          <input type="text" autofocus="true" name="email" class="form-control" placeholder="Enter email"
+            [(ngModel)]="model.email" #email="ngModel" required >
         </div>
 
         <div class="form-group">
-          <label for="">Name</label>
-          <input type="text" autofocus="true" class="form-control"
-          placeholder="Enter your name">
+          <label for="name">Name</label>
+          <input type="text" autofocus="true" name="name" class="form-control" placeholder="Enter your name"
+            [(ngModel)]="model.name" #name="ngModel" required >
         </div>
 
         <div class="form-group">
-          <label for="">Password</label>
-          <input type="password" autocomplete="off" class="form-control"
-          placeholder="Password">
+          <label for="password">Password</label>
+          <input type="password" autocomplete="off" name="password" class="form-control" placeholder="Password"
+            [(ngModel)]="model.password" #password="ngModel" required >
         </div>
 
         <div class="form-group">
-          <label for="">Password confirmation</label>
-          <input type="password_confirmation" autocomplete="off" class="form-control"
-          placeholder="Password confirmation">
+          <label for="password_confirmation">Password confirmation</label>
+          <input type="password" autocomplete="off" name="password_confirmation" class="form-control" placeholder="Password confirmation"
+            [(ngModel)]="model.password_confirmation" #password_confirmation="ngModel" required>
         </div>
 
         <button type="submit" class="btn btn-block btn-custome">SIGN UP</button>
@@ -39,3 +39,6 @@
     </div>
   </div>
 </div>
+
+
+
