--- a/angular2/src/app/app.component.html
+++ b/angular2/src/app/app.component.html
@@ -1,36 +1,8 @@
-<header>
-  <div class="header-logo">
-    <div class="inner">
-      <div class="logo">
-        <a href="/"><img src="./assets/images/logo.jpg" alt="logo"></a>
-        <div class="name-logo">
-          <a href="/">Tinycard</a>
-        </div>
-      </div>
-
-      <div class="search">
-        <form class="form-inline">
-          <input class="form-control f-search" type="search" placeholder="Search" aria-label="Search">
-        </form>
-      </div>
-
-      <div class="nav-list">
-        <div class="nav-item">
-          <a href="/" class="cl-text fa fa-home">HOME</a>
-        </div>
-        <div class="nav-item">
-          <a href="createDeck" class="cl-text fa fa-plus">CREATE</a>
-        </div>
-        <div class="nav-item">
-          <a href="login" class="cl-text fa fa-user">LOG IN</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</header>
+<app-header> 
+</app-header>
 <div class="container">
-    <router-outlet>
-    </router-outlet>
+<router-outlet>
+</router-outlet>
 </div>
 <footer>
   <div class="container">
