--- a/angular2/src/app/deck-details/deck-details.component.css
+++ b/angular2/src/app/deck-details/deck-details.component.css
@@ -220,3 +220,168 @@
     height: 255px;
   }
 }
+
+.list-card {
+  margin: 20px;
+}
+.list-card .item-card {
+  background-color: blanchedalmond;
+  border-radius: 15px;
+  height: 230px;
+  text-align: center;
+  cursor: pointer;
+}
+.list-card .item-card img {
+  margin-bottom: 20px;
+  width: 100%;
+}
+
+.animation {
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.containerr {
+  position: relative;
+  float: left;
+  width: 200px;
+  height: 260px;
+  margin: 10px;
+  background: #fff;
+  /* Set the depth of the elements */
+  -webkit-perspective: 800px;
+  -moz-perspective: 800px;
+  -o-perspective: 800px;
+  perspective: 800px;
+}
+
+.ct-card {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  cursor: pointer;
+  width: 200px;
+  /* Set the transition effects */
+  -webkit-transition: -webkit-transform 0.4s;
+  -moz-transition: -moz-transform 0.4s;
+  -o-transition: -o-transform 0.4s;
+  transition: transform 0.4s;
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  -o-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+}
+
+.ct-card.flipped {
+  -webkit-transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+}
+
+.ct-card .front,
+.ct-card .back {
+  display: block;
+  height: 100%;
+  width: 100%;
+  color: white;
+  text-align: center;
+  font-size: 30px;
+  position: absolute;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -o-backface-visibility: hidden;
+  backface-visibility: hidden;
+  box-shadow: 3px 5px 15px 2px rgba(0, 0, 0, 0.2);
+}
+
+.ct-card .front {
+  background: #a3a3a3;
+}
+
+.ct-card .back {
+  background: #444444;
+  -webkit-transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+}
+
+.del {
+  background-color: white;
+  border: none;
+  outline: none;
+}
+.del .fa-trash-o {
+  color: #32cdff;
+  font-size: 25px;
+  opacity: 0;
+}
+.wrapper {
+  padding: 10px 0 10px;
+}
+.wrapper .n-card {
+  display: flex;
+  margin-top: 25px;
+  padding: 20px 0 20px;
+  position: relative;
+  text-align: center;
+}
+.wrapper .n-card:hover {
+  background-color: #f7f7f7;
+}
+.wrapper .n-card:hover .del {
+  background-color: #f7f7f7;
+}
+.wrapper .n-card:hover .del .fa-trash-o {
+  opacity: 0.7;
+}
+.wrapper .number {
+  flex: 1;
+}
+.wrapper .front-card {
+  flex: 3;
+}
+.wrapper .front-card .image {
+  display: block;
+  width: 45px;
+  margin: 15px;
+}
+.wrapper .front-card .add-img {
+  width: 100%;
+}
+.wrapper .back-card {
+  flex: 3;
+}
+.wrapper .list-option {
+  flex: 1;
+}
+.wrapper .f-deck {
+  background-color: #fff;
+  border-radius: 30px;
+  box-shadow: 0 2px 14px 0 rgba(0, 0, 0, .17);
+  box-sizing: border-box;
+  display: inline-block;
+  height: 310px;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  vertical-align: top;
+  width: 90%;
+}
+.wrapper .f-deck .import-cover-deck {
+  position: absolute;
+  top: 40%;
+  width: 100%;
+}
+.wrapper .f-deck .import-cover-deck .ct-text {
+  border: none;
+  color: black;
+  font-size: 20px;
+  font-weight: bold;
+  opacity: 0.8;
+  text-align: center;
+}
