--- a/angular2/src/app/card/card.component.css
+++ b/angular2/src/app/card/card.component.css
@@ -97,3 +97,68 @@
   font-size: 25px;
   opacity: 0;
 }
+.wrapper {
+  padding: 10px 0 10px;
+}
+.wrapper .n-card {
+  display: flex;
+  margin-top: 25px;
+  padding: 20px 0 20px;
+  position: relative;
+  text-align: center;
+}
+.wrapper .n-card:hover {
+  background-color: #f7f7f7;
+}
+.wrapper .n-card:hover .del {
+  background-color: #f7f7f7;
+}
+.wrapper .n-card:hover .del .fa-trash-o {
+  opacity: 0.7;
+}
+.wrapper .number {
+  flex: 1;
+}
+.wrapper .front-card {
+  flex: 3;
+}
+.wrapper .front-card .image {
+  display: block;
+  width: 45px;
+  margin: 15px;
+}
+.wrapper .front-card .add-img {
+  width: 100%;
+}
+.wrapper .back-card {
+  flex: 3;
+}
+.wrapper .list-option {
+  flex: 1;
+}
+.wrapper .f-deck {
+  background-color: #fff;
+  border-radius: 30px;
+  box-shadow: 0 2px 14px 0 rgba(0, 0, 0, .17);
+  box-sizing: border-box;
+  display: inline-block;
+  height: 310px;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  vertical-align: top;
+  width: 90%;
+}
+.wrapper .f-deck .import-cover-deck {
+  position: absolute;
+  top: 40%;
+  width: 100%;
+}
+.wrapper .f-deck .import-cover-deck .ct-text {
+  border: none;
+  color: black;
+  font-size: 20px;
+  font-weight: bold;
+  opacity: 0.8;
+  text-align: center;
+}
