--- a/angular2/src/app/deck-details/deck-details.component.html
+++ b/angular2/src/app/deck-details/deck-details.component.html
@@ -4,7 +4,7 @@
     <div class="col-xs-12 col-md-4">
       <div class="left">
         <div class="img-deck">
-          <img src="./assets/images/deck-demo.jpg" alt="deck-demo">
+          <img src="{{deck.cover_image.url}}" onError="this.src='./assets/images/deck-demo.jpg';" alt="deck-cover_image">
         </div>
         <div class="txt">
           <div class="name-deck">
