api user_lesson

--- a/angular2/src/app/lesson/lesson.component.html
+++ b/angular2/src/app/lesson/lesson.component.html
@@ -1,22 +1,1 @@
-<!-- <div *ngFor="let card of cards"> -->
-  <!-- <form-wizard> -->
-    <!-- <wizard-step [title]="'Step1'"> -->
-      <div class="les-wrapper">
-        <div class="les-card">
-          <p class="title">New Card</p>
-          <div class="containerr" style="margin-bottom: 35px">
-            <div class="ct-card" (click)="flipped($event)" [class.flipped]="menuOpen">
-              <div class="item-card front">
-                <span> {{current_card.front}} </span>
-              </div>
-              <div class="item-card back">
-                <span> {{current_card.back}} </span>
-              </div>
-            </div>
-          </div>
-          <button type="button" class="btn-continue" onclick="continue()">Continue <i class="fa fa-angle-double-right"></i><i class="fa fa-angle-double-right"></i><i class="fa fa-angle-double-right"></i></button>
-        </div>
-      </div>
-    <!-- </wizard-step> -->
-  <!-- </form-wizard> -->
-  <!-- </div> -->
+<ng-template lesson-content></ng-template>
