--- a/angular2/src/app/deck-details/deck-details.component.html
+++ b/angular2/src/app/deck-details/deck-details.component.html
@@ -61,49 +61,12 @@
                 <div *ngFor= "let lesson of lessons">
                   <div class="col-xs-6 col-sm-4 col-md-2 col-lg-2">
                     <div class="item-lesson">
-                      <div (click)="coverImgModal1.open(); click_lesson(lesson.id)"><img src="./assets/images/lesson.png" alt="lesson"></div>
+                      <form [formGroup]="myFormLesson" novalidate (click)="click_lesson(lesson.id, myFormLesson)">
+                        <img src="./assets/images/lesson.png" alt="lesson">
+                        <input type="hidden" formControlName="lesson_id" form>
+                      </form>
                     </div>
                   </div>
-                  <modal #coverImgModal1>
-                    <modal-content>
-                    <div *ngFor="let card of cards">
-                    <form-wizard>
-                      <wizard-step [title]="'Step1'">
-                        <div class="containerr">
-                          <div class="ct-card" (click)="flipped($event)" [class.flipped]="menuOpen">
-                            <div class="item-card front" style="border-radius: 15px;">
-                              <span> {{card.front}} </span>
-                            </div>
-                            <div class="item-card back">
-                              <span> {{card.back}} </span>
-                            </div>
-                          </div>
-                        </div>
-                      </wizard-step>
-                      <wizard-step [title]="'Step2'" (onNext)="onStep2Next($event)">
-                        <h1>Step2</h1>
-                      </wizard-step>
-                      <wizard-step [title]="'Step3'" (onNext)="onStep3Next($event)">
-                        <h1>Step3</h1>
-                      </wizard-step>
-                      <wizard-step [title]="'Step4'" (onComplete)="onComplete($event)">
-                        <div [ngSwitch]="isCompleted">
-                          <div *ngSwitchDefault>
-                            <h1>Step4</h1>
-                          </div>
-                          <div *ngSwitchCase="true">
-                            <h4>Thank you! You have completed all the steps.</h4>
-                          </div>
-                        </div>
-                      </wizard-step>
-                    </form-wizard>
-                    </div>
-                    </modal-content>
-                    <modal-footer>
-                      <button type="button" class="btn btn-success align-content-end">Continue</button>
-                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    </modal-footer>
-                  </modal>
                 </div>
               </div>
             </div>
