api user_lesson

--- a/angular2/src/app/lesson/lesson.component.html
+++ b/angular2/src/app/lesson/lesson.component.html
@@ -1,17 +1,1 @@
-<!-- <div *ngFor="let card of cards"> -->
-  <!-- <form-wizard> -->
-    <!-- <wizard-step [title]="'Step1'"> -->
-      <div class="containerr">
-        <div class="ct-card" (click)="flipped($event)" [class.flipped]="menuOpen">
-          <div class="item-card front" style="border-radius: 15px;">
-            <span> {{current_card.front}} </span>
-          </div>
-          <div class="item-card back">
-            <span> {{current_card.back}} </span>
-          </div>
-        </div>
-      </div>
-      <button click="continue()">continue</button>
-    <!-- </wizard-step> -->
-  <!-- </form-wizard> -->
-  <!-- </div> -->
+<ng-template lesson-content></ng-template>
