--- a/tinycards/app/assets/stylesheets/card.scss
+++ b/tinycards/app/assets/stylesheets/card.scss
@@ -85,7 +85,9 @@
 }
 
 .ct-card .back {
-  background: #444444;
+  background: while;
+  color: black;
+  opacity: 0.8;
   -webkit-transform: rotateY( 180deg );
   -moz-transform: rotateY( 180deg );
   -o-transform: rotateY( 180deg );
