--- a/tinycards/app/views/decks/show.html.erb
+++ b/tinycards/app/views/decks/show.html.erb
@@ -39,8 +39,9 @@
               <div class="row">
                 <% @lessons.each do |lesson| %>
                   <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
-                    <div class="item-lesson" onclick="modalLesson(<%= lesson.id %>)">
-                      <%= image_tag "lesson.png" %>
+                    <!-- <div class="item-lesson" onclick="modalLesson(<%= lesson.id %>)"> -->
+                    <div class="item-lesson">
+                      <%= link_to image_tag("lesson.png"), lesson %>
                     </div>
                   </div>
                   <!-- Modal -->
