--- a/angular2/src/app/header/header.component.html
+++ b/angular2/src/app/header/header.component.html
@@ -9,23 +9,22 @@
     </div>
 
     <div class="search">
-      <form class="form-inline">
-        <input class="form-control f-search" type="search" placeholder="Search" aria-label="Search">
-      </form>
+      <div class="search-form">
+        <input class="search-input" type="search" placeholder="Search" aria-label="Search">
+      </div>
     </div>
-
     <div class="nav-list">
       <div class="nav-item">
-        <a href="/" class="cl-text fa fa-home">HOME</a>
+        <a href="/" class="cl-text fa fa-home"> HOME</a>
       </div>
       <div class="nav-item">
-        <a href="createDeck" class="cl-text fa fa-plus">CREATE</a>
+        <a href="createDeck" class="cl-text fa fa-plus"> CREATE</a>
       </div>
       <div class="nav-item" *ngIf="!isAuthenticated">
-        <a href="login" class="cl-text fa fa-user">LOG IN</a>
+        <a href="login" class="cl-text fa fa-user"> LOG IN</a>
       </div>
       <div class="nav-item">
-        <a href="javascript:void(0)" class="cl-text fa fa-user" (click)="onLogout()" *ngIf="isAuthenticated">LOG OUT</a>
+        <a href="javascript:void(0)" class="cl-text fa fa-user" (click)="onLogout()" *ngIf="isAuthenticated"> LOG OUT</a>
       </div>
     </div>
   </div>
