--- a/angular2/src/app/create-deck/create-deck.component.html
+++ b/angular2/src/app/create-deck/create-deck.component.html
@@ -15,11 +15,11 @@
             </div>
           </div>
           <div class="txt pd-top-10">
-            <div class="description-deck">
-              <input type="text" formControlName="title" placeholder="Enter title" class="ip input-title">
+            <div class="title-deck">
+              <input type="text" style="outline: none; font-size: 25px" formControlName="title" placeholder="Enter title" class="ip input-title">
             </div>
             <div class="description-deck" style="margin-top: 15px;">
-              <input type="text" formControlName="description" placeholder="Enter description" class="ip input-des">
+              <input type="text" style="outline: none; font-size: 18px" formControlName="description" placeholder="Enter description" class="ip input-des">
             </div>
 
             <div class="btn-ct">
