--- a/angular2/src/app/header/header.component.html
+++ b/angular2/src/app/header/header.component.html
@@ -10,7 +10,7 @@
 
     <div class="search">
       <div class="search-form">
-        <input class="search-input" type="search" placeholder="Search" aria-label="Search">
+        <input class="search-input" type="search" style="outline: none" placeholder="Search" aria-label="Search">
       </div>
     </div>
     <div class="nav-list">
