--- a/angular2/src/app/create-deck/create-deck.component.css
+++ b/angular2/src/app/create-deck/create-deck.component.css
@@ -16,6 +16,12 @@
 .left .txt {
   margin: 15px;
 }
+.left .txt .title-deck input:focus{
+  border-bottom: 2px solid #32cdff;
+}
+.left .txt .description-deck input:focus{
+  border-bottom: 2px solid #32cdff;
+}
 .left .txt .ip {
   background-color: transparent;
   border-left: none;
@@ -49,15 +55,15 @@
 .left .txt .btn-ct .btn-ct-setting {
   background-color: #fff;
   border-radius: 10px;
-  border: 1px solid #32cdff;
+  border: 2px solid #32cdff;
   width: 15%;
 }
 .left .txt .btn-ct .btn-ct-publ {
+  background-color: #32cdff;
+  border-radius: 12px;
+  border: 2px solid #32cdff;
   cursor: pointer;
   font-weight: bold;
-  background-color: #32cdff;
-  border-color: #32cdff;
-  border-radius: 12px;
   margin-left: 8px;
   opacity: 0.7;
   width: 78%;
